fix row highlight in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@ body {
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
-    --row-highlight: #2C2218;
+    --row-highlight: #6C4A27;
   }
 }
 
